--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -289,98 +289,59 @@ img{
   border-radius: .5rem;
   z-index: var(--z-back);
 }
-.skills__html{
-  width: 95%;
+.skills__java{
+  width: 80%;
 }
-.skills__css{
-  width: 85%;
+.skills__android{
+  width: 75%;
 }
-.skills__js{
+.skills__git{
   width: 65%;
 }
-.skills__ux{
-  width: 85%;
+.skills__c{
+  width: 55%;
+}
+.skills__linux{
+  width: 63%;
+}
+.skills__windows{
+  width: 90%;
+}
+.skills__firebase{
+  width: 55%;
 }
 .skills__img{
   border-radius: .5rem;
 }
 
-/* ===== EDUCATION =====*/
-.education__container{
-  row-gap: 2rem;
-  text-align: center;
-  padding: 2rem;
-}
-
-.education__img{
-  box-shadow: 0 4px 25px rgba(14,36,49,.15);
-  border-radius: .5rem;
-  overflow: hidden;
-}
-.education__img img{
-  transition: 1s;
-  cursor: pointer;
-}
-.education__img img:hover{
-  transform: scale(1.1);
-}
-
-.education__title{
-  margin-left: var(--mb-2);
-  margin-top: var(--mb-2);
-  margin-right: var(--mb-2);
-  margin-bottom: var(--mb-2);
-  position: relative;
-  text-align: center;
-  justify-content: center;
-  
-}
-.education__text{
-  justify-content: center;
-  margin-left: var(--mb-1);
-  margin-bottom: var(--mb-2);
-  margin-right: var(--mb-2);
-  text-align: center;
-}
-
 /* ===== PROJECTS =====*/
-.projects__container{
+
+.work__container{
   row-gap: 2rem;
   text-align: center;
   padding: 2rem;
 }
-
-.projects__img{
-  box-shadow: 0 4px 25px rgba(14,36,49,.15);
+.work__img{
+  justify-self: center;
   border-radius: .5rem;
   overflow: hidden;
 }
-.projects__img img{
+.work__img img{
   transition: 1s;
+  width: 700px;
   cursor: pointer;
+  border-radius: .5rem;
 }
-.projects__img img:hover{
+.work__img img:hover{
   transform: scale(1.1);
 }
-
-.projects__title{
-  justify-content: center;
-  margin-left: var(--mb-3);
-  margin-top: var(--mb-2);
-  margin-right: var(--mb-3);
+.work__title{
   margin-bottom: var(--mb-2);
-  position: relative;
-  text-align: center;
 }
-.projects__text{
-  justify-content: center;
-  margin-left: var(--mb-3);
+.work__text{
   margin-bottom: var(--mb-2);
-  margin-right: var(--mb-3);
-  text-align: center;
 }
-
-.button_view_project{
+.button__view__project{
   display: inline-block;
   background-color: var(--first-color);
   color: #fff;
@@ -389,7 +350,7 @@ img{
   font-weight: var(--font-semi);
   border-radius: .5rem;
 }
-.button_view_project:hover{
+.button__view__project:hover{
   box-shadow: 0 10px 36px rgba(0,0,0,.15);
 }
 .text_implementations{
@@ -398,7 +359,24 @@ img{
 }
 
 /* ===== CONTACT =====*/
-
+.contact__input{
+  width: 100%;
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-semi);
+  padding: 1rem;
+  border-radius: .5rem;
+  border: 1.5px solid var(--second-color);
+  outline: none;
+  margin-bottom: var(--mb-4);
+}
+.contact__button{
+  display: block;
+  border: none;
+  outline: none;
+  font-size: var(--normal-font-size);
+  cursor: pointer;
+  margin-left: auto;
+}
 
 /* ===== FOOTER =====*/
 .footer{
@@ -437,7 +415,6 @@ img{
     width: 80px;
     top: 3rem;
   }
-
   .nav{
     height: calc(var(--header-height) + 1rem);
   }
@@ -455,7 +432,6 @@ img{
   .nav__link{
     color: var(--second-color);
   }
-
   .home{
     height: 100vh;
   }
@@ -476,8 +452,12 @@ img{
     width: 457px;
     bottom: 15%;
   }
-
   .about__container, .skills__container{
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    text-align: initial;
+  }
+  .work__container{
     grid-template-columns: repeat(2,1fr);
     align-items: center;
     text-align: initial;
@@ -485,14 +465,11 @@ img{
   .about__img img{
     width: 300px;
   }
-  .projects__container{
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 2rem;
+  .work__img img{
+    width: 700px;
   }
-  .education__container{
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(1,1fr);
-    column-gap: 2rem;
+  .contact__form{
+    width: 360px;
   }
   .contact__container{
     justify-items: center;
